--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <main role="main" class="container">
     <div class="card">
       <img class="desktop-img" src="./images/image-product-desktop.jpg" alt="Product">
       <img class="mobile-img" src="./images/image-product-mobile.jpg" alt="Product">
@@ -33,7 +33,7 @@
         </button>
       </div>
     </div>
-  </div>
+  </main>
 
 </body>
 </html>
